refactor: product mapper on product controller